--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
     <section id="home">
         <h1>Muhammad Dwi Faiz Ilham: <br> <span class="typing-text"></span><span class="typing-cursor">&nbsp;</span></h1>
-        <p class="animated-item">Lulusan SMA IT Al Bunyan yang bersemangat dalam kepemimpinan, berinisiatif tinggi, dan memiliki kemampuan untuk mengubah ide menjadi presentasi yang berdampak.</p>
+        <p class="animated-item">pelajar SMA IT Al Bunyan yang bersemangat dalam kepemimpinan dan berinisiatif tinggi.</p>
         <div class="animated-item">
             <a href="#portfolio" class="btn btn-primary">Lihat Karya Saya</a>
             <a href="#about" class="btn btn-secondary">Baca Tentang Saya</a>
@@ -502,4 +502,5 @@
         });
     </script>
 </body>
+
 </html>
