--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <h2 class="section-title animated-item">Portofolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item animated-item">
-                    <img src="prestasi.jpg" alt="English Reporter Competition">
+                    <img src="prestasi.JPG" alt="English Reporter Competition">
                     <div class="portfolio-content">
                         <h3>English Reporter Competition</h3>
                         <p>Berperan sebagai reporter yang menyajikan informasi secara cepat, jelas, dan meyakinkan dalam Bahasa Inggris. Bukti nyata kemampuan presentasi di bawah tekanan.</p>
@@ -504,3 +504,4 @@
 </body>
 
 </html>
+
