--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
     <section id="home">
         <h1>Muhammad Dwi Faiz Ilham: <br> <span class="typing-text"></span><span class="typing-cursor">&nbsp;</span></h1>
-        <p class="animated-item">pelajar SMA IT Al Bunyan yang bersemangat dalam kepemimpinan dan berinisiatif tinggi.</p>
+        <p class="animated-item">pelajar SMA IT Al Bunyan.</p>
         <div class="animated-item">
             <a href="#portfolio" class="btn btn-primary">Lihat Karya Saya</a>
             <a href="#about" class="btn btn-secondary">Baca Tentang Saya</a>
@@ -350,7 +350,7 @@
                     <h3>Visi & Filosofi</h3>
                     <p>Saya percaya bahwa komunikasi yang efektif adalah kunci kepemimpinan. Visi saya adalah menginspirasi melalui kata-kata dan tindakan, mengubah ide kompleks menjadi pesan yang mudah dipahami dan berdampak bagi audiens.</p><br>
                     <h3>Latar Belakang</h3>
-                    <p>Saya adalah lulusan dari <strong>SMA IT Al Bunyan, Bogor</strong>. Selama di sana, saya aktif dalam berbagai kegiatan yang mengasah kemampuan kepemimpinan dan komunikasi.</p>
+                    <p>Saya adalah pelajar di sekolah <strong>SMA IT Al Bunyan, Bogor</strong>. Selama di sana, saya aktif dalam berbagai kegiatan yang mengasah kemampuan kepemimpinan dan komunikasi.</p>
                 </div>
             </div>
         </div>
@@ -363,7 +363,7 @@
                 <div class="skill-card animated-item">
                     <h3>Komunikasi & Presentasi</h3>
                     <ul>
-                        <li><strong>Public Speaking:</strong> Ahli dalam menyampaikan ide secara jelas dan meyakinkan.</li>
+                        <li><strong>Public Speaking:</strong> bisa menyampaikan sesuatu yang jelas.</li>
                         
                     </ul>
                 </div>
@@ -392,12 +392,12 @@
                 <div class="portfolio-item animated-item">
                     <img src="prestasi.JPG" alt="English Reporter Competition">
                     <div class="portfolio-content">
-                        <h3>English Reporter Competition</h3>
+                        <h3>English Reporter</h3>
                         <p>Berperan sebagai reporter yang menyajikan informasi secara cepat, jelas, dan meyakinkan dalam Bahasa Inggris. Bukti nyata kemampuan presentasi di bawah tekanan.</p>
                     </div>
                 </div>
                 <div class="portfolio-item animated-item" style="transition-delay: 0.2s;">
-                    <img src="prestasi (2).JPG" alt="Kepemimpinan Tim Basket">
+                    <img src="prestasi (2).JPG" alt="bermain basket dengan kompak">
                     <div class="portfolio-content">
                         <h3>Kepemimpinan Tim Basket</h3>
                         <p>Menyoroti soft skill kepemimpinan dan komunikasi. Belajar memotivasi tim, menyusun strategi, dan mengatasi konflik—keterampilan vital bagi pembicara publik.</p>
@@ -407,7 +407,7 @@
                     <img src="prestasi (3).JPG" alt="Proyek Lain">
                     <div class="portfolio-content">
                         <h3>Sorotan Proyek Lainnya</h3>
-                        <p>Berbagai proyek dan kegiatan lain yang telah membentuk kemampuan saya dalam berorganisasi, berkomunikasi, dan memimpin secara efektif.</p>
+                        <p>Berbagai proyek dan kegiatan lain.</p>
                     </div>
                 </div>
             </div>
@@ -473,7 +473,7 @@
 
             // 3. Efek Mengetik (Typing Effect)
             const typingTextElement = document.querySelector('.typing-text');
-            const words = ["Public Speaker.", "Penggerak Komunikasi.", "Fasih Berbahasa Inggris."];
+            const words = ["Public Speaker.", "pelajar"];
             let wordIndex = 0;
             let charIndex = 0;
             let isDeleting = false;
@@ -504,4 +504,5 @@
 </body>
 
 </html>
+
 
