--- a/index.html
+++ b/index.html
@@ -348,9 +348,12 @@
                 <img src="profil.jpg" alt="Foto Profil" class="animated-item">
                 <div class="animated-item">
                     <h3>Visi & Filosofi</h3>
-                    <p>Saya percaya bahwa komunikasi yang efektif adalah kunci kepemimpinan. Visi saya adalah menginspirasi melalui kata-kata dan tindakan, mengubah ide kompleks menjadi pesan yang mudah dipahami dan berdampak bagi audiens.</p><br>
+                    <p>Saya percaya bahwa komunikasi yang efektif adalah kunci kepemimpinan.
+                        Visi saya adalah menjadi pemimpin yang baik dan bijak lalu 
+                        menyadarkan semua manusia betapa penting nya kebersihan di lingkungan, di mulai dari diri sendiri dan sekitarnya.</p><br>
                     <h3>Latar Belakang</h3>
-                    <p>Saya adalah pelajar di sekolah <strong>SMA IT Al Bunyan, Bogor</strong>. Selama di sana, saya aktif dalam berbagai kegiatan yang mengasah kemampuan kepemimpinan dan komunikasi.</p>
+                    <p>Saya adalah pelajar di sekolah <strong>SMA IT Al Bunyan, Bogor</strong>. di sana, saya sedang dalam fase berproses untuk menjadi yang terbaik 
+                        dan bisa membuktikan bahwa saya bisa dengan kemampuan saya sendiri dengan baik.</p>
                 </div>
             </div>
         </div>
@@ -361,24 +364,24 @@
             <h2 class="section-title animated-item">Kemampuan</h2>
             <div class="skills-grid">
                 <div class="skill-card animated-item">
-                    <h3>Komunikasi & Presentasi</h3>
+                    <h3>mengatasi masalah dengan bijak</h3>
                     <ul>
-                        <li><strong>Public Speaking:</strong> bisa menyampaikan sesuatu yang jelas.</li>
+                        <li><strong>Public Speaking:</strong> berbicara dan menyampaikan sesuatu dengan jelas.</li>
                         
                     </ul>
                 </div>
                 <div class="skill-card animated-item" style="transition-delay: 0.2s;">
-                    <h3>Kepemimpinan & Organisasi</h3>
+                    <h3>ikut organisasi sekolah</h3>
                     <ul>
-                        <li><strong>Kepemimpinan Teruji:</strong> Kemampuan memimpin tim, terbukti melalui pengalaman di tim basket.</li>
-                        <li><strong>Inisiatif Tinggi:</strong> Selalu proaktif dalam mencari solusi dan memulai tindakan.</li>
+                        <li><strong>menjadi ketua kebersihan di organisasi osis:</strong> bisa mengatur adik adik kelas untuk menjaga kebersihan sekolah.</li>
+                        <li><strong>bisa bermain basket:</strong>di basket saya masih belajar gimana cara nya kerja sama tim yang baik dan gimana 5 otak bisa jadi 1 otak dalam bermain basket.</li>
                     </ul>
                 </div>
                 <div class="skill-card animated-item" style="transition-delay: 0.4s;">
-                    <h3>Keterampilan Praktis</h3>
+                    <h3>sifat pribadi</h3>
                     <ul>
-                        <li><strong>Mandiri:</strong> Bertanggung jawab penuh atas tugas yang diberikan.</li>
-                        <li><strong>Perhatian Terhadap Detail:</strong> Mencerminkan kedisiplinan dan tanggung jawab.</li>
+                        <li><strong>berani memulai:</strong> bertanggung jawab atas apa yang sudah di lakukan .</li>
+                        <li><strong>kepribadian diri:</strong> tidak menyukai hal hal yang kotor, selalu menjaga kebersihan diri sendiri.</li>
                     </ul>
                 </div>
             </div>
@@ -392,22 +395,22 @@
                 <div class="portfolio-item animated-item">
                     <img src="prestasi.JPG" alt="English Reporter Competition">
                     <div class="portfolio-content">
-                        <h3>English Reporter</h3>
-                        <p>Berperan sebagai reporter yang menyajikan informasi secara cepat, jelas, dan meyakinkan dalam Bahasa Inggris. Bukti nyata kemampuan presentasi di bawah tekanan.</p>
+                        <h3>mc acara</h3>
+                        <p>Berperan sebagai MC acara yang ada di agenda sekolah.</p>
                     </div>
                 </div>
                 <div class="portfolio-item animated-item" style="transition-delay: 0.2s;">
                     <img src="prestasi (2).JPG" alt="bermain basket dengan kompak">
                     <div class="portfolio-content">
-                        <h3>Kepemimpinan Tim Basket</h3>
-                        <p>Menyoroti soft skill kepemimpinan dan komunikasi. Belajar memotivasi tim, menyusun strategi, dan mengatasi konflik—keterampilan vital bagi pembicara publik.</p>
+                        <h3>lomba basket</h3>
+                        <p>Menyoroti soft skill bermain dengan kondusif dan kompak dengan tim sendiri</p>
                     </div>
                 </div>
                 <div class="portfolio-item animated-item" style="transition-delay: 0.4s;">
                     <img src="prestasi (3).JPG" alt="Proyek Lain">
                     <div class="portfolio-content">
-                        <h3>Sorotan Proyek Lainnya</h3>
-                        <p>Berbagai proyek dan kegiatan lain.</p>
+                        <h3>gambar lain nya</h3>
+                        <p>kaciwww.</p>
                     </div>
                 </div>
             </div>
@@ -417,8 +420,8 @@
     <section id="contact">
         <div class="container">
             <div class="contact-intro animated-item">
-                <h2 class="section-title">Mari Berdiskusi</h2>
-                <p>Saya Siap Membawa Suara ke Panggung Anda.</p>
+                <h2 class="section-title">tanya aja</h2>
+                <p>tanyakan apa saja di sini.</p>
             </div>
             
             <form class="contact-form animated-item" action="#" method="POST">
@@ -429,10 +432,10 @@
             </form>
 
             <div class="contact-details animated-item">
-                <p>Email: <a href="mailto:emailanda@example.com">emailanda@example.com</a></p>
-                <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/username-anda</a></p>
+                <p>Email: <a href="mailto:emailanda@example.com">email: faizilhamdwi@gmail.com</a></p>
+                <p>LinkedIn: <a href="#" target="_blank">instagramn.com/in/@faiiyzz_</a></p>
                 <br>
-                <a href="#" class="btn btn-secondary">Unduh CV/Resume Saya</a>
+                <a href="#" class="btn btn-secondary">WA:085934689047</a>
             </div>
         </div>
     </section>
@@ -504,5 +507,6 @@
 </body>
 
 </html>
+
 
 
