--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">Tentang Saya</a></li>
+                    <li><a href="#about">about me</a></li>
                     <li><a href="#skills">Kemampuan</a></li>
                     <li><a href="#portfolio">Portofolio</a></li>
                     <li><a href="#contact">Kontak</a></li>
@@ -337,17 +337,17 @@
         <p class="animated-item">pelajar SMA IT Al Bunyan.</p>
         <div class="animated-item">
             <a href="#portfolio" class="btn btn-primary">Lihat Karya Saya</a>
-            <a href="#about" class="btn btn-secondary">Baca Tentang Saya</a>
+            <a href="#about" class="btn btn-secondary">Baca about me</a>
         </div>
     </section>
 
     <section id="about">
         <div class="container">
-            <h2 class="section-title animated-item">Tentang Saya</h2>
+            <h2 class="section-title animated-item">about me</h2>
             <div class="about-grid">
                 <img src="profil.jpg" alt="Foto Profil" class="animated-item">
                 <div class="animated-item">
-                    <h3>Visi & Filosofi</h3>
+                    <h3>Visi</h3>
                     <p>Saya percaya bahwa komunikasi yang efektif adalah kunci kepemimpinan.
                         Visi saya adalah menjadi pemimpin yang baik dan bijak lalu 
                         menyadarkan semua manusia betapa penting nya kebersihan di lingkungan, di mulai dari diri sendiri dan sekitarnya.</p><br>
@@ -364,23 +364,23 @@
             <h2 class="section-title animated-item">Kemampuan</h2>
             <div class="skills-grid">
                 <div class="skill-card animated-item">
-                    <h3>mengatasi masalah dengan bijak</h3>
+                    <h3>soft spoken parahhh</h3>
                     <ul>
-                        <li><strong>Public Speaking:</strong> berbicara dan menyampaikan sesuatu dengan jelas.</li>
-                        
+                        <li><strong>ramah dengan siapapun:</strong> tidak berbicara kasar dengan perempuan apalagi ibu.</li>
+                        <li><strong>suka menolong dan menggargai:</strong> membantu sesama manusia tepatnya.
                     </ul>
                 </div>
                 <div class="skill-card animated-item" style="transition-delay: 0.2s;">
-                    <h3>ikut organisasi sekolah</h3>
+                    <h3>di sekolah</h3>
                     <ul>
-                        <li><strong>menjadi ketua kebersihan di organisasi osis:</strong> bisa mengatur adik adik kelas untuk menjaga kebersihan sekolah.</li>
-                        <li><strong>bisa bermain basket:</strong>di basket saya masih belajar gimana cara nya kerja sama tim yang baik dan gimana 5 otak bisa jadi 1 otak dalam bermain basket.</li>
+                        <li><strong>menjadi ketua kebersihan di osis:</strong> bisa mengatur adik adik kelas untuk menjaga kebersihan sekolah.</li>
+                        <li><strong>bermain basket dengan baik:</strong> di basket saya masih belajar gimana cara nya kerja sama tim yang baik dan gimana 5 otak bisa jadi 1 otak dalam bermain basket.</li>
                     </ul>
                 </div>
                 <div class="skill-card animated-item" style="transition-delay: 0.4s;">
                     <h3>sifat pribadi</h3>
                     <ul>
-                        <li><strong>berani memulai:</strong> bertanggung jawab atas apa yang sudah di lakukan .</li>
+                        <li><strong>berani memulai:</strong> bertanggung jawab atas apa yang sudah di lakukan.</li>
                         <li><strong>kepribadian diri:</strong> tidak menyukai hal hal yang kotor, selalu menjaga kebersihan diri sendiri.</li>
                     </ul>
                 </div>
@@ -432,8 +432,9 @@
             </form>
 
             <div class="contact-details animated-item">
-                <p>Email: <a href="mailto:emailanda@example.com">email: faizilhamdwi@gmail.com</a></p>
-                <p>LinkedIn: <a href="#" target="_blank">instagramn.com/in/@faiiyzz_</a></p>
+                <p>Email: <a href="mailto:emailanda@example.com">faizilhamdwi@gmail.com</a></p>
+                <p>contact us: <a href="#" target="_blank">instagramn: @faiiyzz_</a></p> 
+                <p>tiktok: >@kejedot21
                 <br>
                 <a href="#" class="btn btn-secondary">WA:085934689047</a>
             </div>
@@ -507,6 +508,7 @@
 </body>
 
 </html>
+
 
 
 
